2013-05-08  Tom Tromey  <tromey@redhat.com>

	* progmodes/m4-mode.el (m4-mode-syntax-table):
	Do not treat "_" as word constituent.  (Bug#14167)

2013-05-07  Glenn Morris  <rgm@gnu.org>

	* eshell/em-hist.el (eshell-isearch-map): Initialize in the defvar.
	Remove explicit eshell-isearch-cancel-map.

	* progmodes/f90.el (f90-smart-end-names): New option.
	(f90-smart-end): Doc fix.
	(f90-end-block-optional-name): New constant.
	(f90-block-match): Respect f90-smart-end-names.

2013-05-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/octave.el (octave-smie-forward-token): Be more careful
	about implicit semi-colons (bug#14218).

2013-05-07  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* frame.el (display-monitor-attributes-list)
	(frame-monitor-attributes): New functions.

2013-05-06  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (octave-syntax-propertize-function): Change
	\'s syntax to escape when inside double-quoted strings.  (Bug#14332)
	(octave-font-lock-keywords): Use octave-operator-regexp.
	(octave-completion-at-point): Renamed from
	octave-completion-at-point-function.
	(inferior-octave-directory-tracker): Robustify.
	(octave-text-functions): Remove and fix its uses.  No such things
	any more.

2013-05-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/trace.el (trace--display-buffer): New function.
	(trace-make-advice): Use it.

2013-05-06  Juri Linkov  <juri@jurta.org>

	* emacs-lisp/lisp-mode.el (eval-defun-2): Doc fix.  (Bug#14344)
	(eval-defun-2, eval-defun, eval-last-sexp, eval-last-sexp-1):
	Doc fix.
	(emacs-lisp-mode-map): Replace "minibuffer" with "echo area"
	in the help string.  (Bug#12985)

2013-05-06  Kelly Dean  <kellydeanch@yahoo.com>  (tiny change)

	* simple.el (shell-command-on-region): Doc fix.  (Bug#14279)

2013-05-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/perl-mode.el: Add support for here documents.
	(perl-syntax-propertize-function): Match here-doc markers.